--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 asgiref==3.2.7
 autopep8==1.4.4
+boto3==1.14.33
+botocore==1.17.33
 certifi==2020.4.5.1
+dj-database-url==0.5.0
 Django==3.0.3
 django-ckeditor==5.9.0
 django-cleanup==5.0.0
@@ -12,10 +15,13 @@ django-hitcount==1.3.2
 django-js-asset==1.2.2
 django-model-utils==4.0.0
 django-notifications-hq==1.6.0
+django-storages==1.9.1
 django-tinymce==3.0.2
 django-tinymce4-lite==1.8.0
+docutils==0.15.2
 Faker==4.1.1
 gunicorn==20.0.4
+jmespath==0.10.0
 jsmin==2.2.2
 jsonfield==3.1.0
 Pillow==7.2.0
@@ -23,11 +29,11 @@ pycodestyle==2.6.0
 python-dateutil==2.8.1
 python-decouple==3.3
 pytz==2020.1
+s3transfer==0.3.3
 six==1.15.0
 sqlparse==0.3.1
 swapper==1.1.2.post1
 sweetify==2.0.0
 text-unidecode==1.3
+urllib3==1.25.10
 whitenoise==5.1.0
-dj-database-url 
-psycopg2
