--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.2.7
 autopep8==1.4.4
+awscli==1.18.110
 boto3==1.14.33
 botocore==1.17.33
 certifi==2020.4.5.1
+colorama==0.4.3
 dj-database-url==0.5.0
 Django==3.0.3
 django-ckeditor==5.9.0
@@ -25,10 +27,14 @@ jmespath==0.10.0
 jsmin==2.2.2
 jsonfield==3.1.0
 Pillow==7.2.0
+psycopg2-binary==2.8.5
+pyasn1==0.4.8
 pycodestyle==2.6.0
 python-dateutil==2.8.1
 python-decouple==3.3
 pytz==2020.1
+PyYAML==5.3.1
+rsa==4.5
 s3transfer==0.3.3
 six==1.15.0
 sqlparse==0.3.1
